--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,7 +21,7 @@ h1 {
 }
 
 h2 {
-	color: #3DB76F;
+	color: #1D3E66;
 	font-size: 8vw;
 }
 
@@ -72,7 +72,7 @@ h3 {
 
 .pageTop a {
 	text-decoration: none;
-	color: #3DB76F;
+	color: black;
 }
 
 .displayPageTop {
@@ -461,7 +461,7 @@ form button {
 
 /*footer with disclaimer/logo*/
 .proventus {
-	height: 40px;
+	height: 25px;
 	width: auto;
 }
 
