--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,3 @@
-
 * {
         margin: 0;
         padding: 0;
@@ -82,6 +81,12 @@ h5 {
 .displayPageTop {
 	margin-left: 5%;
 	margin-right: 5%;
+}
+
+@supports (-webkit-overflow-scrolling: touch) { 	
+body *: { 		
+background-attachment: scroll; 	
+	} 
 }
 
 .bgIndex {
